mod(display): table is prettified in several ways: title and author columns are combines, on mobile only title/author + score columns are shown, null-urls are now longer shown as active links, clicking on a link now opens a new tab, month in `Time` tab is now correctly displayed using 1-based indexing

--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -92,7 +92,7 @@ button:hover {
 }
 
 @media all and (max-width: 959px) {
-    .col_0, .col_1, .col_2, .col_6 {
+    .col_0, .col_1, .col_4, .col_5 {
         display: none;
         width:0;
         height:0;
